--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@awesome-cordova-plugins/geolocation": "^6.3.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.5.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-geolocation": "^4.1.0",
     "ionicons": "^6.0.3",
     "n": "^9.0.1",
     "rxjs": "~7.5.0",
