--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.5.0",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "^4.6.1",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.0",
+    "@ionic-native/barcode-scanner": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "add": "^2.0.6",
+    "capacitor": "^0.5.5",
     "cordova-plugin-geolocation": "^4.1.0",
+    "ionic": "^5.4.16",
     "ionicons": "^6.0.3",
+    "ios": "^0.0.1",
     "n": "^9.0.1",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~7.5.0",
     "stable": "^0.1.8",
     "tslib": "^2.3.0",
